--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # DevOps
-black==22.3.0
-click==8.1.3 
+git+https://github.com/psf/black.git@22.3.0
+click==8.1.3
 pytest-cov==4.0.0
 pylint==2.15.3
 boto3==1.24.87
@@ -10,13 +10,14 @@ fastapi==0.85.0
 uvicorn==0.18.3
 
 # Core dependencies
+numpy==1.26.0
 pandas==1.5.3
 matplotlib==3.7.1
 
 # Testing and linting
 flake8==6.0.0
 pytest==7.4.2
-nbval==0.11.0  # Updated to avoid compatibility issues
+nbval==0.11.0
 
 # Jupyter notebook (optional, if needed for running the notebook locally)
 jupyterlab==4.0.6
